# docuzebre

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  deployment.yaml  pyproject.toml  run.sh
.github/workflows/: ci-cd.yaml
api/: app.py
deployments/: deployment-fastapi.yaml  deployment-streamlit.yaml  fastapi.yaml  streamlit.yaml
docuzebre/: inference.py  model_generation.py
front/: main.py  model_generation.py  tab_example.py  tab_model_generation.py  tab_tryout.py  utils.py
tests/: conftest.py  test_main.py  test_tab_example.py  test_tab_model_generation.py  test_tab_tryout.py
